--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>这是我使用github pages搭建的个人站点。</h1>
+
+<script>
+    window.location.href="https://blog.csdn.net/m0_46394255";
+</script>
+
 </body>
 </html>
